<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/light_grey"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@id/search_friend_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/preference_single_item"
        android:clickable="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/add_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/find_friends_by_micromsg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/add_friend"
            android:padding="8dp"
            android:text="@string/contact_search_title"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/mm_submenu"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/add_qq_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/preference_first_item"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="btn_shake">

        <ImageView
            android:id="@+id/add_friend_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/find_more_friend_qq_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/add_friend_shake"
            android:padding="8dp"
            android:text="@string/find_friends_by_qq"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/mm_submenu"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/add_phone_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_last_item"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="btn_shake">

        <ImageView
            android:id="@+id/add_friend_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/find_more_friend_mobile_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/add_friend_shake"
            android:padding="8dp"
            android:text="@string/find_friends_by_mobile"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/mm_submenu"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/search_public_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/preference_single_item"
        android:clickable="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/add_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/find_more_friend_star_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/add_friend"
            android:padding="8dp"
            android:text="@string/explore_all_verified_users"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/mm_submenu"/>
    </RelativeLayout>
</LinearLayout>